# 3DGP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  flake.nix  graph-view.md  imgui.ini  main.cpp  render_refactor.md  terrain.cpp  terrain.h  terrain_demo
graphs/: current.json  default.json
src/: constraint_node.h  main.cpp  renderer.cpp  renderer.h  terrain.cpp  terrain.h  utils.h
src/graph/: compile.cpp  compile.h  execute.cpp  execute.h  graph.cpp  graph_compile.cpp  graph_compile.h  graph_execute.cpp  graph_execute.h  graph_serialize.cpp  graph_serialize.h  graph_view.cpp  graph_view.h  graph_view_stub.cpp  serialize.cpp  serialize.h  types.h  view.cpp  view.h
src/renderer/: core.cpp  core.h  demo.cpp  internal.h  shaders.h  support.cpp
src/terrain/: biomes.cpp  biomes.h  blending.cpp  blending.h  climate.cpp  climate.h  fields.h  landforms.cpp  landforms.h  layout.cpp  layout.h  mountains.cpp  mountains.h  plains.cpp  plains.h  plateaus.cpp  plateaus.h  provinces.cpp  provinces.h  rivers.cpp  rivers.h  terrain_noise.cpp  terrain_noise.h  util.h  valleys.cpp  valleys.h  voronoi.cpp  voronoi.h  wfc.cpp  wfc.h
